Added CLAUDE requirements, then fixed as many bugs as I could find.